# bullsharks.online

./: .env.example  .gitignore  API_DOCUMENTATION.md  Cargo.toml  Dockerfile  README.md
client/: .gitignore  index.html  package-lock.json  package.json
client/src/: App.css  App.tsx
client/src/api/: activities.ts  auth.ts
client/src/components/: Leaderboard.css  Leaderboard.tsx
client/src/types/: activity.ts
docs/: DEVOPS.md
server/: .gcloudignore  .gitignore  Cargo.toml  README.md
server/src/: error.rs  main.rs
server/src/api/: activities.rs  mod.rs
server/src/models/: bullshark.rs  club.rs  mod.rs  team_stats.rs
server/src/services/: activity_controller.rs  auth_controller.rs  database.rs  mod.rs  strava_client.rs
server/src/utils/: database_utils.rs  startup_utils.rs
src/api/: activities.rs  athletes.rs  health.rs  mod.rs
src/models/: athlete.rs  mod.rs  oauth.rs  team_stats.rs
src/services/: activity_controller.rs  database.rs
src/utils/: mod.rs  startup_utils.rs
