[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"]}
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"]}
chrono-tz = "0.10"
sha2 = "0.10"
tokio-cron-scheduler = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "tls-rustls"] }
dashmap = "6.0"
uuid = { version = "1.19.0", features = [ "v4" ]}